Fix: Replace --padding-xl with --spacing-xl.

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -139,7 +139,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    padding: var(--padding-xl);
+    padding: var(--spacing-xl);
 
     &__container {
       flex-flow: row nowrap;
